# ai-cli

./: .gitignore  README.md  pyproject.toml
ai_cli/: __init__.py  __main__.py  app.py
ai_cli/core/: __init__.py  config.py  context.py  dashboard.py  db.py  doctor.py  history.py  web.py
ai_cli/executor/: __init__.py  planner.py  runner.py  undo.py
ai_cli/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
ai_cli/prompts/: __init__.py  system.py
ai_cli/tools/: __init__.py  web.py
ai_cli/ui/: __init__.py  onboard.py  printer.py  theme.py
tests/: preview_ui.py  test_features.py  test_smoke.py  verify_db.py
