[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-cli"
description = "Lightweight AI partner living inside your terminal. Type naturally. It understands. It fixes. It executes."
keywords = ["ai", "terminal", "cli", "assistant", "llm", "claude", "openai", "gemini"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "babu" }]
dynamic = ["version"]
classifiers = [
    "Operating System :: OS Independent",
    "Topic :: Software Development",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "anthropic >= 0.40.0",
    "openai >= 1.50.0",
    "google-genai >= 1.0.0",
    "rich >= 13.0.0",
    "prompt-toolkit >= 3.0.50",
    "typer >= 0.12.0",
    "tomli-w >= 1.0.0",
    "distro >= 1.8.0",
    "httpx >= 0.27.0",
]

[project.optional-dependencies]
web = [
    "tavily-python >= 0.3.0",
]
dev = [
    "pytest >= 8.0.0",
    "ruff >= 0.5.0",
]

[project.scripts]
ai = "ai_cli.app:entry_point"

[project.urls]
homepage = "https://github.com/loyality7/ai-cli"
repository = "https://github.com/loyality7/ai-cli"

[tool.hatch.version]
path = "ai_cli/__init__.py"

[tool.hatch.build.targets.wheel]
only-include = ["ai_cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]
